# context-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-datasets.md  architecture.md
examples/: compressor_eval.py  e2e_claude.py  minimal.py  proxy_benchmark.py
src/context_bench/: __init__.py  __main__.py  cache.py  registry.py  results.py  runner.py  types.py
src/context_bench/datasets/: __init__.py  agent_traces.py  code.py  huggingface.py  ifeval.py  instruction.py  knowledge.py  local.py  longcontext.py  multi_turn.py  nli.py  qa.py  reasoning.py  summarization.py
src/context_bench/evaluators/: __init__.py  answer_quality.py  code_execution.py  ifeval_checker.py  llm_judge.py  math_equivalence.py  multiple_choice.py  nli_label_match.py  rouge.py
src/context_bench/metrics/: __init__.py  cost_of_pass.py  latency.py  per_dataset.py  quality.py  token_stats.py
src/context_bench/reporters/: __init__.py  html.py  json_out.py  markdown.py
src/context_bench/systems/: __init__.py  claude_cli.py  openai_proxy.py
src/context_bench/utils/: tokens.py
tests/: test_cli.py  test_dataset_loaders.py  test_evaluator_metrics_gaps.py  test_gap_datasets.py  test_infrastructure.py  test_metrics.py  test_multiturn_datasets.py  test_new_loaders.py  test_openai_proxy.py  test_registry.py  test_retry_progress.py  test_runner.py
